fixed card overlap issue

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,13 +1,13 @@
 @import "../../styles/style";
 .card {
-  width: 224px;
+  width: 232px;
   height: 384px;
   border-radius: 2px;
   cursor: pointer;
   position: relative;
   overflow: hidden;
   margin-bottom: 32px;
-  margin-left: 2.1vw;
+  margin-left: 1.8vw;
 
   p {
     margin: 0;
